//协议版本
syntax = "proto3";
//包名
package = "com.ble.protobuf";

//开门测试
message DeviceOpenRequest {
   int32 pwd = 1;    	//开门密码 
   int32 type=2;     	//0:安装工、1:用户 2:访客
   int64 uid=3;      	//用户标识
   int64 timeStamp=4;  	//时间戳
   string phoneNo=5;  	//手机号
}

//设置设备公共参数
message DeviceSetDeviceNameRequest {
    string name = 1;	//设备名称
	string code = 2;	//设备编码
	int32 pairPWD = 3;	//配对密码
	int32 openPWD = 4;	//开门密码
	int32 openDelay = 5;	// 开门延迟
	int32 alarmDelay = 6;	// 开门报警延迟
	int32 installPurpose = 7;	//安装用途 0:单元机  1：围墙机 2：多围墙 
	string  mqttServer = 8; //设置mqtt server ip:port信息
	string  ntpServer = 9;//设置ntp server ip:port信息
	int32   isdhcp = 10;   //0:手动、1:自动
	string  ip = 11; 	  //设备ip
	string  gateway = 12;  //网关
	string  mask = 13; 	  //子网掩码
	string  dns = 14; 	  //dns
	string  groupId = 15;  //默认通行组
}

//设置设备呼叫信息(a9特有)
message DeviceSipInfoRequest{
	string centerSip = 1; 
	string sipServer = 2; 
	string sipAccount = 3; 		
	string sipPwd = 4;			
	string sipServerSpare = 5; 		
	string sipAccountSpare = 6; 
	string sipPwdSpare = 7;		
}

//设备通用回答信息
message DeviceCommonResponse {
    int32   status = 1;           
	string  reserved = 2; 
}
